<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="CallHandler" Id="{c31d4359-2e5f-495a-b27f-8ef31ef079b0}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK CallHandler
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	r_i: INT;
	doorOpenTimer : TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[FOR r_i := 0 TO 10 DO
    IF GVL_1.i_bCallButtons[r_i] THEN
        GVL_1.g_iTargetFloor := r_i;
        RETURN;
    END_IF;
END_FOR

IF GVL_1.g_bMovingUp THEN
    FOR r_i := GVL_1.i_iCurrentFloor + 1 TO 9 DO
        IF GVL_1.i_bCallUp[r_i] THEN
            GVL_1.g_iTargetFloor := r_i;
            RETURN;
        END_IF;
    END_FOR
END_IF

IF GVL_1.g_bMovingDown THEN
    r_i := GVL_1.i_iCurrentFloor - 1;
    WHILE r_i >= 1 DO
        IF GVL_1.i_bCallDown[r_i] THEN
            GVL_1.g_iTargetFloor := r_i;
            RETURN;
        END_IF;
        r_i := r_i - 1;
    END_WHILE;
END_IF

IF NOT GVL_1.g_bMovingUp AND NOT GVL_1.g_bMovingDown THEN
    FOR r_i := 1 TO 9 DO
        IF GVL_1.i_bCallUp[r_i] OR GVL_1.i_bCallDown[r_i] THEN
            GVL_1.g_iTargetFloor := r_i;
            RETURN;
        END_IF;
    END_FOR
END_IF

IF GVL_1.i_iCurrentFloor = GVL_1.g_iTargetFloor THEN
    GVL_1.q_bOpenDoor := TRUE;
    doorOpenTimer(IN := TRUE, PT := T#10S);
    IF doorOpenTimer.Q THEN
        GVL_1.q_bOpenDoor := FALSE;
        GVL_1.q_bCloseDoor := TRUE;
        doorOpenTimer(IN := FALSE);

        GVL_1.i_bCallUp[GVL_1.g_iTargetFloor] := FALSE;
        GVL_1.i_bCallDown[GVL_1.g_iTargetFloor] := FALSE;
    END_IF
ELSE
    doorOpenTimer(IN := FALSE);
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="CallHandler">
      <LineId Id="105" Count="6" />
      <LineId Id="113" Count="8" />
      <LineId Id="123" Count="10" />
      <LineId Id="135" Count="8" />
      <LineId Id="145" Count="3" />
      <LineId Id="150" Count="2" />
      <LineId Id="154" Count="6" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>