<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="Lights" Id="{2035a0a0-e9f2-4049-8a2b-fb84b4dcf7ea}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK Lights
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	r_i: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[FOR r_i := 1 TO 9 DO
    IF GVL_1.i_bCallUp[r_i] THEN
        GVL_1.q_bCallAckUp[r_i] := TRUE;
    END_IF
    
    IF GVL_1.i_bCallDown[r_i] THEN
        GVL_1.q_bCallAckDown[r_i] := TRUE;
    END_IF

    IF GVL_1.i_iCurrentFloor = r_i AND GVL_1.i_bDoorOpen AND 
       (GVL_1.q_bCallAckUp[r_i] OR GVL_1.q_bCallAckDown[r_i]) THEN
        GVL_1.q_bCallAckUp[r_i] := FALSE;
        GVL_1.q_bCallAckDown[r_i] := FALSE;
        GVL_1.i_bCallUp[r_i] := FALSE;
        GVL_1.i_bCallDown[r_i] := FALSE;
    END_IF
END_FOR

FOR r_i := 0 TO 10 DO
    IF GVL_1.i_bCallButtons[r_i] AND GVL_1.i_iCurrentFloor = r_i THEN
        GVL_1.q_bOpenDoor := TRUE;
    END_IF
END_FOR
]]></ST>
    </Implementation>
    <LineIds Name="Lights">
      <LineId Id="49" Count="22" />
      <LineId Id="48" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>